# engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
ext/: CMakeLists.txt
ext/amazing_std/: CMakeLists.txt
ext/amazing_std/include/astd/: astd.h
ext/amazing_std/src/: allocator.cpp
ext/amazing_std/test/: main.cpp
ext/spirv_cross/: CMakeLists.txt
include/camera/: orbital_camera.h
include/core/: base.h
include/core/dependency/: dependency_edge.h  dependency_graph.h  dependency_node.h
include/core/math/: algebra.h  misc.h  misc.inl
include/event/: event.h  sdl_event.h
include/geometry/: geometry.h  mesh.h  scene.h  type.h
include/geometry/2d/: line2d.h  point2d.h  segment2d.h
include/geometry/2d/convex_hull/: disc2d.h  polygon2d.h  rectangle2d.h  triangle2d.h
include/geometry/3d/: face3d.h  line3d.h  point3d.h  segment3d.h
include/geometry/3d/primitive/: capsule.h  cone.h  cuboid.h  cylinder.h  disc3d.h  mesh.h  primitive.h  rectangle3d.h  sphere.h  triangle3d.h
include/geometry/algorithm/: boolean.h  construct.h  detect.h  intersect.h
include/io/: read.h
include/io/loader/: model_loader.h  scene_loader.h
include/rendering/: api.h  render_api.h  render_entity.h  render_enum.h  render_type.h
include/rendering/acceleration/: render_geometry.h
include/rendering/draw/: render_entity.h  render_scene.h  render_system.h  render_view.h
include/rendering/graph/: render_builder.h  render_graph.h
include/rendering/rhi/: create_info.h  enumeration.h  structure.h  wrapper.h
include/rendering/rhi/common/: adapter.h  buffer.h  command_buffer.h  command_pool.h  compute_pipeline.h  descriptor_set.h  device.h  fence.h  graphics_pass_encoder.h  graphics_pipeline.h  instance.h  query_pool.h  queue.h  sampler.h  semaphore.h  swapchian.h  texture.h  texture_view.h
res/shader/: common.hlsl  compile.bat
res/shader/box/: box.hlsl  frag.dxil  frag.hlsl  vert.dxil  vert.hlsl
res/shader/mipmap/: mip.hlsl
res/shader/post-processing/: blur.hlsl
res/shader/quad/: frag.hlsl  quad.hlsl  vert.hlsl
res/shader/triangle/: fragment_shader.dxil  fragment_shader.hlsl  triangle.hlsl  vertex_shader.dxil  vertex_shader.hlsl
sample/: CMakeLists.txt
sample/geometry/: CMakeLists.txt
sample/geometry/common/: common.h
sample/geometry/construct/: construct.cpp
sample/geometry/convex_hull/: convex_hull.cpp
sample/geometry/intersect/: intersect.cpp
sample/rendering/: CMakeLists.txt
sample/rendering/box/: box.cpp
sample/rendering/common/: common.cpp  common.h
sample/rendering/multi-thread/: multi-thread.cpp
sample/rendering/post-processing/: post-processing.cpp
sample/rendering/quad/: quad.cpp
sample/rendering/ray-tracing/: ray-tracing.cpp
sample/rendering/triangle/: triangle.cpp
sample/triangle/: main.cpp
src/: pch.h
src/camera/: orbital_camera.cpp
src/core/dependency/: dependency_edge.cpp  dependency_node.cpp
src/geometry/2d/: line2d.cpp  segment2d.cpp
src/geometry/2d/convex_hull/: disc2d.cpp  rectangle2d.cpp  triangle2d.cpp
src/geometry/3d/: face3d.cpp  segment3d.cpp
src/geometry/3d/primitive/: capsule.cpp  cone.cpp  cuboid.cpp  cylinder.cpp  disc3d.cpp  mesh.cpp  rectangle3d.cpp  sphere.cpp  triangle3d.cpp
src/geometry/algorithm/: boolean.cpp  construct.cpp  detect.cpp  intersect.cpp
src/io/: read.cpp
src/io/loader/: model_loader.cpp  scene_loader.cpp
src/rendering/: api.h  render_api.cpp
src/rendering/acceleration/: render_asset_manager.cpp  render_asset_manager.h  render_command.cpp  render_command.h  render_driver.cpp  render_driver.h  render_geometry.cpp  render_geometry.h
src/rendering/draw/: draw_render_scene.cpp  draw_render_scene.h  draw_render_system.cpp  draw_render_system.h  draw_render_view.cpp  draw_render_view.h
src/rendering/graph/: draw_render_builder.cpp  draw_render_builder.h  draw_render_graph.cpp  draw_render_graph.h  render_node.h
src/rendering/graph/resource/: render_graph_node.h  render_graph_pass_node.cpp  render_graph_pass_node.h  render_graph_resource_edge.h  render_graph_resource_node.cpp  render_graph_resource_node.h  render_graph_resources.h  render_graph_texture.cpp  render_graph_texture.h  render_util.cpp  render_util.h
src/rendering/rhi/: create_info.h  enumeration.h  structure.h  wrapper.cpp  wrapper.h
src/rendering/rhi/common/: adapter.h  buffer.h  command_buffer.h  command_pool.h  compute_pass_encoder.h  descriptor_set.h  device.h  fence.h  graphics_pass_encoder.h  graphics_pipeline.h  instance.h  memory_pool.h  query_pool.h  queue.h  root_signature.cpp  root_signature.h  root_signature_pool.cpp  root_signature_pool.h  sampler.h  semaphore.h  shader_library.h  swapchian.h  texture.h  texture_view.h
src/rendering/rhi/d3d12/: dx12.h  dx12adapter.cpp  dx12adapter.h  dx12command_buffer.cpp  dx12command_buffer.h  dx12command_pool.cpp  dx12command_pool.h  dx12compute_pass_encoder.cpp  dx12compute_pass_encoder.h  dx12compute_pipeline.cpp  dx12compute_pipeline.h  dx12descriptor_set.cpp  dx12descriptor_set.h  dx12device.cpp  dx12device.h  dx12fence.cpp  dx12fence.h  dx12graphics_pass_encoder.cpp  dx12graphics_pass_encoder.h  dx12graphics_pipeline.cpp  dx12graphics_pipeline.h  dx12instance.cpp  dx12instance.h  dx12query_pool.cpp  dx12query_pool.h  dx12queue.cpp  dx12queue.h  dx12root_signature.cpp  dx12root_signature.h  dx12semaphore.cpp  dx12semaphore.h  dx12swapchain.cpp  dx12swapchain.h
src/rendering/rhi/exts/: vk_exts.h
src/rendering/rhi/vulkan/: vk.h  vkadapter.cpp  vkadapter.h  vkcommand_buffer.cpp  vkcommand_buffer.h  vkcommand_pool.cpp  vkcommand_pool.h  vkcompute_pass_encoder.cpp  vkcompute_pass_encoder.h  vkcompute_pipeline.cpp  vkcompute_pipeline.h  vkdescriptor_set.cpp  vkdescriptor_set.h  vkdevice.cpp  vkdevice.h  vkfence.cpp  vkfence.h  vkgraphics_pass_encoder.cpp  vkgraphics_pass_encoder.h  vkgraphics_pipeline.cpp  vkgraphics_pipeline.h  vkinstance.cpp  vkinstance.h  vkquery_pool.cpp  vkquery_pool.h  vkqueue.cpp  vkqueue.h  vkroot_signature.cpp  vkroot_signature.h  vksemaphore.cpp  vksemaphore.h  vksurface.cpp  (+3 more)
src/test/: dx12.cpp  main.cpp
(+65 files in other folders)
